[gd_scene load_steps=39 format=3 uid="uid://dgjabqthka8rx"]

[ext_resource type="Script" uid="uid://chkpb6fdxhpv7" path="res://scripts/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://ctd63fx6fjn8u" path="res://scenes/nodes/gravity.tscn" id="2_gmlin"]
[ext_resource type="FontFile" uid="uid://o0do1enh0mer" path="res://fonts/novem___.ttf" id="2_ur7pv"]
[ext_resource type="Texture2D" uid="uid://ck2d86c7gt35h" path="res://sprites/player/idle/character_idle1.png" id="3_a8ls1"]
[ext_resource type="PackedScene" uid="uid://blqdsk7hiee48" path="res://scenes/nodes/player_input.tscn" id="3_gmlin"]
[ext_resource type="PackedScene" uid="uid://cj3safif0timg" path="res://scenes/nodes/player_movement.tscn" id="4_lvxji"]
[ext_resource type="Texture2D" uid="uid://cy3lc43l860ke" path="res://sprites/player/idle/character_idle2.png" id="4_qfm1y"]
[ext_resource type="Texture2D" uid="uid://bwunrllthyp25" path="res://sprites/player/idle/character_idle3.png" id="5_fulsm"]
[ext_resource type="Texture2D" uid="uid://c00b2oxrd7a61" path="res://sprites/player/idle/character_idle4.png" id="6_4r5pv"]
[ext_resource type="PackedScene" uid="uid://mq4cjsfqxsi5" path="res://scenes/nodes/player_animation.tscn" id="7_0owmy"]
[ext_resource type="Texture2D" uid="uid://bfxn2qe4kduse" path="res://sprites/player/idle/character_idle5.png" id="7_60mlk"]
[ext_resource type="Texture2D" uid="uid://bsiwxgc26nk2w" path="res://sprites/player/idle/character_idle6.png" id="8_i4ail"]
[ext_resource type="PackedScene" uid="uid://cmewwmaibcla5" path="res://scenes/nodes/replica_system.tscn" id="8_smehm"]
[ext_resource type="Texture2D" uid="uid://bbs4e4bu7i5fg" path="res://sprites/player/idle/character_idle7.png" id="9_a38lo"]
[ext_resource type="Texture2D" uid="uid://dxitdb0ng7p66" path="res://sprites/player/idle/character_idle8.png" id="10_4ni07"]
[ext_resource type="Texture2D" uid="uid://ch2csjwwl81aj" path="res://sprites/player/walk/character_walk1.png" id="11_pf23h"]
[ext_resource type="Texture2D" uid="uid://bsc0ctoc0cl32" path="res://sprites/player/walk/character_walk2.png" id="12_dt7fs"]
[ext_resource type="Texture2D" uid="uid://bak7lvgq1imn0" path="res://sprites/player/walk/character_walk3.png" id="13_wqfne"]
[ext_resource type="Texture2D" uid="uid://bqjl3auxmjyuq" path="res://sprites/player/walk/character_walk4.png" id="14_wnwbv"]
[ext_resource type="Texture2D" uid="uid://cfkltffs2sota" path="res://sprites/player/walk/character_walk5.png" id="15_gl8cc"]
[ext_resource type="Texture2D" uid="uid://orl6p4hu5la8" path="res://sprites/player/walk/character_walk6.png" id="16_487ah"]
[ext_resource type="Texture2D" uid="uid://dtqorngjavy0c" path="res://sprites/player/walk/character_walk7.png" id="17_md1ol"]
[ext_resource type="Texture2D" uid="uid://ocdvgv3blqdu" path="res://sprites/player/walk/character_walk8.png" id="18_bj30b"]
[ext_resource type="Texture2D" uid="uid://0q7boqcv5vr1" path="res://sprites/player/walk/character_walk9.png" id="19_jc3p3"]
[ext_resource type="Texture2D" uid="uid://b2recfb1v33sa" path="res://sprites/player/walk/character_walk10.png" id="20_hax0n"]
[ext_resource type="Texture2D" uid="uid://dkehdbn5cwevd" path="res://sprites/player/walk/character_walk11.png" id="21_t4otl"]
[ext_resource type="Texture2D" uid="uid://ddmbwaemlq58e" path="res://sprites/player/walk/character_walk12.png" id="22_j2b1d"]
[ext_resource type="PackedScene" uid="uid://cbavo4k480nfc" path="res://scenes/nodes/player_audio.tscn" id="28_dt7fs"]
[ext_resource type="AudioStream" uid="uid://divrqcunn0bjt" path="res://sounds/194978__soundmary__footsteps-on-metal.mp3" id="29_dt7fs"]

[sub_resource type="LabelSettings" id="LabelSettings_smehm"]
font = ExtResource("2_ur7pv")

[sub_resource type="GDScript" id="GDScript_smehm"]
script/source = "extends Label

class_name ReplicaLabel
"

[sub_resource type="Animation" id="Animation_smehm"]
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReplicaLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.48),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReplicaBackground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "typewriter"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReplicaLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReplicaLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ReplicaBackground:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ur7pv"]
_data = {
&"RESET": SubResource("Animation_smehm"),
&"typewriter": SubResource("Animation_fjrip")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_0owmy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a8ls1")
}, {
"duration": 1.0,
"texture": ExtResource("4_qfm1y")
}, {
"duration": 1.0,
"texture": ExtResource("5_fulsm")
}, {
"duration": 1.0,
"texture": ExtResource("6_4r5pv")
}, {
"duration": 1.0,
"texture": ExtResource("7_60mlk")
}, {
"duration": 1.0,
"texture": ExtResource("8_i4ail")
}, {
"duration": 1.0,
"texture": ExtResource("9_a38lo")
}, {
"duration": 1.0,
"texture": ExtResource("10_4ni07")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_pf23h")
}, {
"duration": 1.0,
"texture": ExtResource("12_dt7fs")
}, {
"duration": 1.0,
"texture": ExtResource("13_wqfne")
}, {
"duration": 1.0,
"texture": ExtResource("14_wnwbv")
}, {
"duration": 1.0,
"texture": ExtResource("15_gl8cc")
}, {
"duration": 1.0,
"texture": ExtResource("16_487ah")
}, {
"duration": 1.0,
"texture": ExtResource("17_md1ol")
}, {
"duration": 1.0,
"texture": ExtResource("18_bj30b")
}, {
"duration": 1.0,
"texture": ExtResource("19_jc3p3")
}, {
"duration": 1.0,
"texture": ExtResource("20_hax0n")
}, {
"duration": 1.0,
"texture": ExtResource("21_t4otl")
}, {
"duration": 1.0,
"texture": ExtResource("22_j2b1d")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kk62l"]
radius = 7.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvxji"]
radius = 6.0
height = 24.0

[sub_resource type="GDScript" id="GDScript_ur7pv"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_node", "player_input_node", "player_movement_node", "player_animation_node", "player_audio_node", "replica_system_node")]
script = ExtResource("1_dovo2")
gravity_node = NodePath("Gravity")
player_input_node = NodePath("PlayerInput")
player_movement_node = NodePath("PlayerMovement")
player_animation_node = NodePath("PlayerAnimation")
player_audio_node = NodePath("PlayerAudio")
replica_system_node = NodePath("ReplicaSystem")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ReplicaBackground" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -191.0
offset_right = -220.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(14.44, 3.8)
color = Color(0.152941, 0.152941, 0.152941, 0.85098)

[node name="ReplicaLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -238.0
offset_top = -179.0
offset_right = 15.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.12, 1.64)
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_smehm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
visible_characters = 0
visible_ratio = 0.0
script = SubResource("GDScript_smehm")

[node name="ReplicaAnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
&"": SubResource("AnimationLibrary_ur7pv")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0owmy")
animation = &"walk"
frame_progress = 0.436975

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_kk62l")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_lvxji")
debug_color = Color(0.995792, 0, 0.198893, 0.42)

[node name="Gravity" parent="." instance=ExtResource("2_gmlin")]
gravity = 300.0

[node name="PlayerInput" parent="." instance=ExtResource("3_gmlin")]

[node name="PlayerMovement" parent="." instance=ExtResource("4_lvxji")]
speed = 100.0
ladder_speed = 40.0
jump_velocity = 120.0

[node name="PlayerAreasManager" type="Node" parent="."]

[node name="PlayerAnimation" parent="." node_paths=PackedStringArray("animated_sprite") instance=ExtResource("7_0owmy")]
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="ReplicaSystem" parent="." node_paths=PackedStringArray("replica_label", "replica_animation_player", "audio_stream_player") instance=ExtResource("8_smehm")]
replica_label = NodePath("../UI/ReplicaLabel")
replica_animation_player = NodePath("../UI/ReplicaAnimationPlayer")
audio_stream_player = NodePath("../ReplicasAudioStreamPlayer")

[node name="PlayerAudio" parent="." node_paths=PackedStringArray("audio_stream_player") instance=ExtResource("28_dt7fs")]
audio_stream_player = NodePath("../SoundEffectsAudioStreamPlayer")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
position_smoothing_enabled = true
position_smoothing_speed = 2.0
editor_draw_limits = true
script = SubResource("GDScript_ur7pv")

[node name="ReplicasAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_dt7fs")
volume_db = -15.0

[node name="SoundEffectsAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_dt7fs")
pitch_scale = 1.07

[connection signal="animation_finished" from="UI/ReplicaAnimationPlayer" to="ReplicaSystem" method="_on_replica_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="PlayerAreasManager" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="PlayerAreasManager" method="_on_area_2d_area_exited"]
